--- a/PetSitter/app/build.gradle
+++ b/PetSitter/app/build.gradle
@@ -24,13 +24,14 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+    //add Firebase library
     compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.0'
-    testCompile 'junit:junit:4.12'
-
-    //add Firebase library
     compile 'com.google.firebase:firebase-database:9.6.1'
     compile 'com.android.support.test.espresso:espresso-core:2.2.2'
+    compile 'com.android.support:support-v4:25.3.0'
+    testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
