--- a/PetSitter/app/build.gradle
+++ b/PetSitter/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.0'
     compile 'com.google.firebase:firebase-database:9.6.1'
+    compile 'com.google.firebase:firebase-auth:9.6.1'
     compile 'com.android.support.test.espresso:espresso-core:2.2.2'
     compile 'com.android.support:support-v4:25.3.0'
     testCompile 'junit:junit:4.12'
