--- a/PetSitter/app/src/main/AndroidManifest.xml
+++ b/PetSitter/app/src/main/AndroidManifest.xml
@@ -4,6 +4,11 @@
 
     <uses-permission android:name="android.permission.VIBRATE" />
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:name=".PetSitter"
         android:allowBackup="true"
@@ -13,19 +18,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activity.MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
             android:name=".activity.HomeActivity"
             android:label="@string/title_activity_home"
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.HealthActivity"
             android:label="@string/title_activity_health"
@@ -42,7 +37,26 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.NotificationActivity" />
         </activity>
-        <activity android:name=".activity.CRUDHealthActivity"></activity>
+        <activity android:name=".activity.CRUDHealthActivity" />
+        <activity android:name=".activity.LoginActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".activity.SignUpActivity" />
+
+        <receiver android:name=".receiver.AlarmeNotificacao">
+            <intent-filter>
+                <action android:name="com.example.katsutoshi.petsitter.util.NOTIFICACAO" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </receiver>
+
+        <activity android:name=".activity.CRUDPetActivity" />
+        <activity android:name=".activity.FoodActivity"></activity>
     </application>
 
 </manifest>
